<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/item_launcher.root_container"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/dp_10">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/dp_15"
        android:layout_margin="@dimen/dp_10"
        android:elevation="@dimen/dp_10"
        android:backgroundTint="@color/black">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_250">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/rocket_launch_image"
                    android:id="@+id/item_launcher.image_view"
                    android:scaleType="centerCrop"/>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/trans_black"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_margin="@dimen/dp_15"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/item_launcher.status_image"
                        android:src="@drawable/circle_drawable"/>
                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/failure"
                        android:textSize="@dimen/dp_10"
                        style="@style/regular_font"
                        android:layout_marginLeft="@dimen/dp_5"
                        android:textColor="@color/white"
                        android:id="@+id/item_launcher.status_text"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="@dimen/dp_20"
                    android:layout_marginTop="@dimen/dp_20"
                    android:layout_marginEnd="@dimen/dp_20"
                    android:layout_marginBottom="@dimen/dp_20"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/item_launcher.title_tv"
                            style="@style/medium_font"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/launchers_heading"
                            android:textColor="@color/white"
                            android:textSize="@dimen/dp_20" />

                        <ImageView
                            android:id="@+id/item_launcher.bookmark_icon"
                            android:layout_width="@dimen/dp_20"
                            android:layout_height="@dimen/dp_20"
                            android:layout_marginLeft="@dimen/dp_5"
                            android:src="@drawable/bookmark_unselected"
                            app:tint="@color/white" />
                    </LinearLayout>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/item_launcher.description_tv"
                        style="@style/regular_font"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:lineSpacingExtra="@dimen/dp_5"
                        android:text="@string/description"
                        android:textColor="@color/white"
                        android:textSize="@dimen/dp_12" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/item_launcher.favourite_icon"
                    android:layout_width="@dimen/dp_25"
                    android:layout_height="@dimen/dp_25"
                    android:layout_alignParentRight="true"
                    android:layout_marginStart="@dimen/dp_15"
                    android:layout_marginTop="@dimen/dp_15"
                    android:layout_marginEnd="@dimen/dp_15"
                    android:layout_marginBottom="@dimen/dp_15"
                    android:src="@drawable/heart_unselected"
                    app:tint="@color/white" />
            </RelativeLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>