<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".launches.view.LauncherDetailActivity">
    <ImageView
        android:layout_width="@dimen/dp_50"
        android:layout_height="@dimen/dp_50"
        android:src="@drawable/back_icon"
        android:padding="@dimen/dp_10"
        android:id="@+id/launcher_detail.back_icon"
        android:layout_margin="@dimen/dp_10"
        app:tint="@color/white" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/launcher_detail.back_icon"
        android:scrollbars="none"
        android:scrollIndicators="none">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_250"
                android:layout_marginLeft="@dimen/dp_20"
                app:cardCornerRadius="@dimen/dp_15"
                android:layout_marginRight="@dimen/dp_20"
                android:id="@+id/launcher_detail.image_container">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/rocket_launch_image"
                        android:id="@+id/launcher_detail.image_view"
                        android:scaleType="centerCrop"/>
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/trans_black"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:layout_margin="@dimen/dp_15"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/launcher_detail.status_image"
                            android:src="@drawable/circle_drawable"
                            app:tint="@color/success" />
                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/success"
                            android:textSize="@dimen/dp_10"
                            style="@style/regular_font"
                            android:layout_marginLeft="@dimen/dp_5"
                            android:textColor="@color/white"
                            android:id="@+id/launcher_detail.status_text"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_margin="@dimen/dp_20"
                        android:orientation="vertical">
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:orientation="horizontal">
                            <androidx.appcompat.widget.AppCompatTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/launchers_heading"
                                android:textSize="@dimen/dp_20"
                                style="@style/medium_font"
                                android:textColor="@color/white"
                                android:id="@+id/launcher_detail.title_tv"/>

                            <ImageView
                                android:id="@+id/launcher_detail.bookmark_icon"
                                android:layout_width="@dimen/dp_20"
                                android:layout_height="@dimen/dp_20"
                                android:layout_marginLeft="@dimen/dp_5"
                                android:src="@drawable/bookmark_unselected"
                                app:tint="@color/white" />
                        </LinearLayout>
                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/description"
                            android:textSize="@dimen/dp_12"
                            android:layout_marginTop="10dp"
                            style="@style/regular_font"
                            android:textColor="@color/white"
                            android:lineSpacingExtra="@dimen/dp_5"
                            android:id="@+id/launcher_detail.description_tv"/>
                    </LinearLayout>
                    <ImageView
                        android:id="@+id/launcher_detail.favourite_icon"
                        android:layout_width="@dimen/dp_25"
                        android:layout_height="@dimen/dp_25"
                        android:layout_alignParentRight="true"
                        android:layout_marginStart="@dimen/dp_15"
                        android:layout_marginTop="@dimen/dp_15"
                        android:layout_marginEnd="@dimen/dp_15"
                        android:layout_marginBottom="@dimen/dp_15"
                        android:src="@drawable/heart_unselected"
                        app:tint="@color/white" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/launcher_detail.image_container"
                android:layout_marginLeft="@dimen/dp_20"
                android:layout_marginRight="@dimen/dp_20"
                app:cardCornerRadius="@dimen/dp_15"
                android:id="@+id/launcher_detail.rocket_detail_container"
                android:backgroundTint="@color/black"
                android:layout_marginTop="@dimen/dp_15"
                android:layout_marginBottom="@dimen/dp_15">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="@dimen/dp_15"
                    android:orientation="vertical">
                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rocket_details"
                        android:textSize="@dimen/dp_16"
                        style="@style/medium_font"
                        android:textColor="@color/white"/>
                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_15"
                        android:text="Name: Name of the rocket."
                        android:textSize="@dimen/dp_14"
                        android:lineSpacingExtra="@dimen/dp_5"
                        android:id="@+id/launcher_detail.rocket_name_tv"
                        style="@style/regular_font"
                        android:textColor="@color/white"/>
                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_15"
                        android:text="Type: Type or model of the rocket."
                        android:textSize="@dimen/dp_14"
                        android:id="@+id/launcher_detail.rocket_type_tv"
                        android:lineSpacingExtra="@dimen/dp_5"
                        style="@style/regular_font"
                        android:textColor="@color/white"/>
                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_15"
                        android:id="@+id/launcher_detail.rocket_description"
                        android:text="Description: A brief description of the rocket and its capabilities."
                        android:textSize="@dimen/dp_14"
                        android:lineSpacingExtra="@dimen/dp_5"
                        style="@style/regular_font"
                        android:textColor="@color/white"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/launcher_detail.rocket_detail_container"
                android:layout_marginLeft="@dimen/dp_20"
                android:layout_marginRight="@dimen/dp_20"
                app:cardCornerRadius="@dimen/dp_15"
                android:id="@+id/launcher_detail.lauch_detail"
                android:backgroundTint="@color/black"
                android:layout_marginTop="@dimen/dp_15"
                android:layout_marginBottom="@dimen/dp_15">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="@dimen/dp_15"
                    android:orientation="vertical">
                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/launch_details"
                        android:textSize="@dimen/dp_16"
                        style="@style/medium_font"
                        android:textColor="@color/white"/>
                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_15"
                        android:text="Status: Detailed status of the launch (e.g., success, failure, reason for failure if
available)."
                        android:id="@+id/launcher_detail.status_tv"
                        android:textSize="@dimen/dp_14"
                        android:lineSpacingExtra="@dimen/dp_5"
                        style="@style/regular_font"
                        android:textColor="@color/white"/>
                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_10"
                        android:text="Launch Site: Name and location of the launch site."
                        android:textSize="@dimen/dp_14"
                        android:id="@+id/launcher_detail.launch_site_tv"
                        android:lineSpacingExtra="@dimen/dp_5"
                        style="@style/regular_font"
                        android:textColor="@color/white"/>
                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_15"
                        android:text="Launch Window: The time window during which the launch was planned to occur."
                        android:textSize="@dimen/dp_14"
                        android:id="@+id/launcher_detail.launch_window_tv"
                        android:lineSpacingExtra="@dimen/dp_5"
                        style="@style/regular_font"
                        android:textColor="@color/white"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/launcher_detail.lauch_detail"
                android:layout_marginLeft="@dimen/dp_20"
                android:layout_marginRight="@dimen/dp_20"
                app:cardCornerRadius="@dimen/dp_15"
                android:id="@+id/launcher_detail.mission_patch_detail"
                android:backgroundTint="@color/black"
                android:layout_marginTop="@dimen/dp_15"
                android:layout_marginBottom="@dimen/dp_15">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="@dimen/dp_15"
                    android:orientation="vertical">
                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mission_patch"
                        android:textSize="@dimen/dp_16"
                        style="@style/medium_font"
                        android:textColor="@color/white"/>
                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_15"
                        android:text="Name and location of the launch site."
                        android:textSize="@dimen/dp_14"
                        android:id="@+id/launcher_detail.mission_patch"
                        android:lineSpacingExtra="@dimen/dp_5"
                        style="@style/regular_font"
                        android:textColor="@color/white"/>
                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mission_description"
                        android:textSize="@dimen/dp_16"
                        android:layout_marginTop="@dimen/dp_20"
                        style="@style/medium_font"
                        android:textColor="@color/white"/>
                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_15"
                        android:text="A brief description or objectives of the mission."
                        android:textSize="@dimen/dp_14"
                        android:lineSpacingExtra="@dimen/dp_5"
                        style="@style/regular_font"
                        android:id="@+id/launcher_detail.mission_description_tv"
                        android:textColor="@color/white"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/launcher_detail.mission_patch_detail"
                android:layout_marginLeft="@dimen/dp_20"
                android:layout_marginRight="@dimen/dp_20"
                app:cardCornerRadius="@dimen/dp_15"
                android:backgroundTint="@color/black"
                android:layout_marginTop="@dimen/dp_15"
                android:layout_marginBottom="@dimen/dp_15">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="@dimen/dp_15"
                    android:orientation="vertical">
                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/links"
                        android:textSize="@dimen/dp_16"
                        style="@style/medium_font"
                        android:textColor="@color/white"/>
                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_15"
                        android:text="Any other relevant links related to the launch, such as press kits, articles, or
official SpaceX pages."
                        android:textSize="@dimen/dp_14"
                        android:lineSpacingExtra="@dimen/dp_5"
                        style="@style/regular_font"
                        android:id="@+id/launcher_detail.links_tv"
                        android:textColor="@color/white"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>